# Arminda_Software

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DEMO.md  README.md  docker-compose.yml  seed-demo.py  setup-demo.sh  start-demo.sh
backend/: CONTEXT.md  CONTEXT_MODELS.md  CONTEXT_SERVICES.md  README.md  conftest.py  manage.py  pyproject.toml  requirements.txt
backend/apps/: CONTEXT.md
backend/apps/calculo/: CONTEXT.md  apps.py  dependencias.py  previdencia.py  tabelas.py
backend/apps/calculo/formula/: avaliador.py  contexto.py  errors.py  funcoes.py  parser.py
backend/apps/calculo/tests/: test_avaliador.py  test_dependencias.py  test_funcoes.py  test_parser.py  test_previdencia.py  test_tabelas.py
backend/apps/core/: admin.py  apps.py  models.py  permissions.py  signals.py  urls.py  validators.py  views.py
backend/apps/core/auth/: serializers.py  urls.py  views.py
backend/apps/core/middleware/: tenant.py
backend/apps/core/migrations/: 0001_initial.py  0002_seed_grupos_papeis.py  0003_tabelalegal.py  0004_seed_tabelas_legais_2024_2026.py
backend/apps/core/tests/: test_admin_smoke.py  test_auth_change_password.py  test_auth_jwt.py  test_management_commands.py  test_management_criar_usuario.py  (+6 more)
backend/apps/esocial/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/imports/: CONTEXT.md  apps.py  models.py  urls.py  views.py
backend/apps/payroll/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/people/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/reports/: admin.py  apps.py  models.py  urls.py  views.py
backend/arminda/: asgi.py  urls.py  wsgi.py
backend/arminda/settings/: base.py  demo.py  dev.py  local.py  prod.py
backend/tests/: conftest.py  test_smoke.py
(+264 files in other folders)
